Android: guard platform plugin egl code behind QT_CONFIG(egl)

Pick-to: 6.8
Fixes: QTBUG-140536
Change-Id: Ic2f3fe3fde80af7b84d8df5cf38e03de6b627112
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 8fdc771bf00138a22ec0db55b744eb44d813f3cd)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>